simple-java-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: simple-java-app-argo
  name: simple-java-app-argo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-java-app-argo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-java-app-argo
    spec:
      containers:
      - image: 192.168.1.10:8443/sample-java-app-jib
        name: sample-java-app-jib
        resources: {}
status: {}
