simple-java-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-java-app-argo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: simple-java-app-argo
          servicePort: 18080
        path: /hello
